fix mobile button visibility

--- a/src/components/BlueGreenTest.css
+++ b/src/components/BlueGreenTest.css
@@ -2,11 +2,6 @@
   width: 100vw !important;
   height: 100vh !important;
   overflow: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
 }
 
 .blue-green-test-container {
@@ -77,15 +72,11 @@
 
 .blue-green-test-button-container {
   width: 100%;
-  height: auto;
-  min-height: 60px;
+  height: 60px;
   position: relative;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
 
 .blue-green-test-button {
